<resources>
    <!-- App info -->
    <string name="app_name">GeoCaching</string>
    <string name="title_activity_geo_point_map">Carte Geocaching</string>

    <!-- App menu -->
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>

    <!-- layout activity_main.xml -->
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="writeTag">Ecriture tag</string>
    <string name="readTag">Lecture tag</string>
    <string name="msgFromTag">Message du tag</string>
    <string name="msgToTag">Message vers tag</string>
    <string name="btnWriteMsg">Ecrire tag</string>
    <string name="btnSaveLocation">Sauver geocache</string>
    <string name="btnShowLocation">Afficher geocache</string>
    <string name="btnP2P">P2P connexion</string>
    <string name="btnBuy">Acheter</string>

    <!-- layout dialoglocation.xml -->
    <string name="geoCacheName">Nom Geocache</string>
    <string name="geoCacheInfo">Information Geocache</string>

    <!-- layout dialog_geo_info.xml -->
    <string name="geoCachePoint">Geocache</string>

    <!-- layout activity-p2p.xml -->
    <string name="btnStartScan">Lancer scan</string>
    <string name="btnMakeDiscoverable">Rendre visible</string>
    <string name="btnSendData">Envoyer geocache</string>
    <string name="btnStartServer">Demarrer reception</string>
    <string name="btnStopServer">Fermer reception</string>
    <string name="tvMessage">Message</string>

    <!-- GPS -->
    <string name="GPS_disabled">GPS indisponible, voir menu parametres</string>

    <!-- NFC -->
    <string name="NFC_alert">NFC peripherique introuvable</string>
    <string name="NFC_disable">NFC indisponible, voir menu parametres</string>

    <string name="banner_ad_unit_id">ca-app-pub-5973967299137670/1731475544</string>

</resources>
