<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mag.linux.android_sensors.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >


        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Compass"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewLat"
                    android:layout_column="0"
                    android:text="@string/latitude"
                    android:textAlignment="center"></TextView>

                <TextView
                    android:id="@+id/textViewLong"
                    android:layout_column="1"
                    android:text="@string/longitude"
                    android:textAlignment="center"></TextView>

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonWriteNFC"
            android:layout_marginTop="40dp"
            android:text="@string/msgFromTag" />

        <TextView
            android:id="@+id/textViewMsgFromNFC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMessage"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextNFC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLocation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:text="@string/msgToTag" />

        <Button
            android:id="@+id/buttonWriteNFC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextNFC"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/btnWriteMsg" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btnSaveLocation" />

        <Button
            android:id="@+id/buttonSeeMyTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btnShowLocation" />

        <Button
            android:id="@+id/buttonP2P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btnP2P" />

    </LinearLayout>

</ScrollView>

