<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/firstLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollFirst"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnStartScan" />

            <Button
                android:id="@+id/buttonDiscoverable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:text="@string/btnMakeDiscoverable" />

            <Button
                android:id="@+id/buttonSendData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:text="@string/btnSendData" />

            <Button
                android:id="@+id/buttonStartServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:text="@string/btnStartServer" />

            <Button
                android:id="@+id/buttonStopServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:text="@string/btnStopServer" />

            <TextView
                android:id="@+id/textViewMsg"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/tvMessage" />

            <ScrollView
                android:id="@+id/scrollerOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/linearTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/listViewDevice"
                        android:layout_width="match_parent"
                        android:layout_height="206dp"
                        android:choiceMode="singleChoice" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>